FIX: mobile date was pushed offscreen, w/ h-scroll

--- a/app/assets/stylesheets/desktop/discourse.scss
+++ b/app/assets/stylesheets/desktop/discourse.scss
@@ -33,7 +33,6 @@ body {
 
   .boxed {
     height: 100%;
-    @include border-radius-all(5px);
     &.white {
       background-color: $secondary;
     }
